# owynrichen.com

./: .gitignore  README.md  build.sh  package.json  pelicanconf.py  publishconf.py  pyproject.toml  wrangler.toml
buildscripts/: build.sh  bundle.js  bundle.mjs  svgo.config.mjs
content/: building_and_maturing_teams.md  cloudflare_testing.md  deepfaking_my_voice.md  k3s_proxmox_setup.md  leadership.md  planes_around_the_earth.md  playing_with_ai_agents.md  post.md
content/pages/: resume.md
earth/: lowpoly_plane.blend
src/: fun_worker.py
theme/static/3d/low_poly_jet2/: scene.gltf
theme/static/css/: codehilite.css  index.css  list_page_styles.css  style.css
theme/static/js/: Earth.js  MeshFresnelMaterial.js  Picker.js  Planes.js  Starfield.js  Sun.js  TrackingCameraControls.js  main.js
theme/templates/: base.html  category.html  index.html
