[tool.poetry]
name = "owynrichen-com"
version = "0.1.0"
description = ""
authors = ["Owyn Richen"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
pelican = {extras = ["markdown"], version = "^4.10.2"}
pygments = "^2.19.1"
# markdown-mermaidjs = "^1.0.0"
markdown-mermaidjs = {git = "https://github.com/owynrichen/markdown-mermaidjs/", branch = "feature/add_icon_packs"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
